Improving wording in tip 5 and using https for links

--- a/frontend/tips/5-select-from-a-dropdown/_java.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/_java.mdx
@@ -20,7 +20,7 @@ Next, we'll start our class off with some setup and teardown methods.
 
 ### Example 1
 
-Our first example is `dropdownTest`, after visiting [the example application](http://the-internet.herokuapp.com/dropdown) we find the dropdown list by
+Our first example is `dropdownTest`, after visiting [the example application](https://the-internet.herokuapp.com/dropdown) we find the dropdown list by
 it's ID and store it in a variable. We then find each clickable element in the dropdown list (e.g., each `option`)
 with `findElements` (note the plural).
 
