--- a/frontend/tips/5-select-from-a-dropdown/_javascript.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/_javascript.mdx
@@ -15,7 +15,7 @@ some test setup and teardown methods.
 
 ### Example 1
 
-Our first example is `select the hard way`, after visiting [the example application](http://the-internet.herokuapp.com/dropdown) we find the dropdown list
+Our first example is `select the hard way`, after visiting [the example application](https://the-internet.herokuapp.com/dropdown) we find the dropdown list
 by its ID and store it in a variable. We then find each clickable element in the dropdown list
 (e.g., each `option`) with `findElements`.
 
