--- a/frontend/tips/5-select-from-a-dropdown/_ruby.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/_ruby.mdx
@@ -14,7 +14,7 @@ and `run` methods.
 
 ### Example 1
 
-After visiting [the example application](http://the-internet.herokuapp.com/dropdown) we find the dropdown list by its ID and store it in a variable. We
+After visiting [the example application](https://the-internet.herokuapp.com/dropdown) we find the dropdown list by its ID and store it in a variable. We
 then find each clickable element in the dropdown list (e.g., each `option`) with `find_elements`.
 
 Grabbing all the options returns a collection that we iterate over and when the text matches what we want it will
