fix typo: "All of the FOOs" -> "All the FOOs" or even "All FOOs" (suggested by IDEA)

--- a/frontend/tips/19-data-driven-testing/main.mdx
+++ b/frontend/tips/19-data-driven-testing/main.mdx
@@ -24,7 +24,7 @@ There are times when you run across functionality you want to test repeatedly wi
 system behaves. We're going to go over a way to do this that will take some of the burden out of the process.
 
 Sometimes performing these tests are because you want to test the expected outcomes. Other times, because you
-want to see if the system breaks in an odd way. But, wiring up all of these permutations into a set of automated
+want to see if the system breaks in an odd way. But, wiring up all these permutations into a set of automated
 tests can be burdensome and rife with copied code, which can make it hard to maintain over time.
 
 ## A Solution
