--- a/frontend/tips/28-upgrading-from-rc/main.mdx
+++ b/frontend/tips/28-upgrading-from-rc/main.mdx
@@ -119,7 +119,7 @@ __NOTE: For more insight into implicit and explicit waits, check out [tip 47](ht
 
 ### Getting Text From The Page
 
-It's an expensive operation (and overkill) to get __ALL__ of the text from the page to make a verification. And
+It's an expensive operation (and overkill) to get __ALL__ the text from the page to make a verification. And
 it takes longer to execute this in WebDriver.
 
 A better approach is to find the element that has the text you want and check it's text instead. Alternatively,
