--- a/frontend/tips/36-available-resources/main.mdx
+++ b/frontend/tips/36-available-resources/main.mdx
@@ -77,8 +77,7 @@ there's one waiting for you.
 
 + [Selenium Conf](https://seleniumconf.com/)
 
-This is the annual conference where practitioners and Selenium Core Committers gather and share knowledge. All of
-the talks are top notch, as is the hallway track. If I were to attend just one conference a year, it would be this one.
+This is the annual conference where practitioners and Selenium Core Committers gather and share knowledge. All talks are top notch, as is the hallway track. If I were to attend just one conference a year, it would be this one.
 
 + [Selenium Camp](https://seleniumcamp.com/)
 
