--- a/frontend/tips/5-select-from-a-dropdown/_csharp.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/_csharp.mdx
@@ -22,7 +22,7 @@ Our first example is `SelectFromDropdownTheHardWay`. After visiting [the example
 dropdown list by its ID and store it in a variable. We then find each element in the dropdown list (e.g., each
 element with an `option` tag) with `FindElements` (note the plural).
 
-Grabbing all of the options with `FindElements` returns a collection that we iterate over. When the text matches
+Grabbing all options with `FindElements` returns a collection that we iterate over. When the text matches
 what we want (e.g., `"Option 1"`) we click on it.
 
 We finish the test by performing a check to see that our selection was made correctly. This is done by iterating
