--- a/frontend/tips/5-select-from-a-dropdown/_java.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/_java.mdx
@@ -24,7 +24,7 @@ Our first example is `dropdownTest`, after visiting [the example application](ht
 its ID and store it in a variable. We then find each clickable element in the dropdown list (e.g., each `option`)
 with `findElements` (note the plural).
 
-Grabbing all of the options with `findElements` returns a collection that we iterate over. When the text matches
+Grabbing all options with `findElements` returns a collection that we iterate over. When the text matches
 what we want, we click on it.
 
 We finish the test by performing a check to see that our selection was made correctly. This is done by iterating
