--- a/frontend/tips/5-select-from-a-dropdown/_javascript.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/_javascript.mdx
@@ -19,7 +19,7 @@ Our first example is `select the hard way`, after visiting [the example applicat
 by its ID and store it in a variable. We then find each clickable element in the dropdown list
 (e.g., each `option`) with `findElements`.
 
-Grabbing all of the options returns a collection that we iterate over and when the text matches what we want it
+Grabbing all options returns a collection that we iterate over and when the text matches what we want it
 will click on it.
 
 We finish the test by performing a check to see that our selection was made correctly. This is done by looping
