--- a/frontend/tips/57-junit-xml/_ruby.mdx
+++ b/frontend/tips/57-junit-xml/_ruby.mdx
@@ -37,7 +37,7 @@ Thankfully parallel_tests has a RSpec command helper file as well (e.g., `.paral
 
 Now with numerous tests being run through `parallel_tests` the final result will be a series of JUnit XML files (e.g., `result1.xml`, `result2.xml`, etc.).
 
-And if we didn't want this to run all of the time (like if we only wanted JUnit XML output to get generated when running our tests on a CI server) then we can add a conditional to our `.parallel_rspec` file.
+And if we didn't want this to run all the time (like if we only wanted JUnit XML output to get generated when running our tests on a CI server) then we can add a conditional to our `.parallel_rspec` file.
 
 ```ruby
 # filename: .parallel_rspec
