--- a/frontend/tips/60-list-tags/_ruby.mdx
+++ b/frontend/tips/60-list-tags/_ruby.mdx
@@ -60,7 +60,7 @@ We store this information in an array (and potentially an array of arrays) withi
 "story:BIZ-1234"=>[["Two passes", "./spec/two_spec.rb", 2]], "story:BIZ-1235"=>[["Two fails", "./spec/two_spec.rb", 3]]}
 ```
 
-Now that we have all of the tags and the test data that shows where they are in use, we can generate a simple report with it.
+Now that we have all the tags and the test data that shows where they are in use, we can generate a simple report with it.
 
 ```ruby
 # filename: tag_lister.rb
