--- a/frontend/tips/7-use-a-page-object/_ruby.mdx
+++ b/frontend/tips/7-use-a-page-object/_ruby.mdx
@@ -73,7 +73,7 @@ Next we use `attr_reader` to create a place to store the Selenium WebDriver inst
 
 The class expects an argument (e.g. the Selenium WebDriver instance) which is received through the initialize method.
 Inside the initialize method we take care of passing the Selenium object into the `attr_reader` object along with
-visiting the page and verifying that we are in the correct place. All of these things will execute in order when
+visiting the page and verifying that we are in the correct place. All these things will execute in order when
 this class is instantiated.
 
 We then break out each of the test steps into methods that execute the behavior specific to the page while also
