--- a/frontend/tips/15-download-secure-files/_ruby.mdx
+++ b/frontend/tips/15-download-secure-files/_ruby.mdx
@@ -79,7 +79,7 @@ run do
 end
 ```
 
-By using `find_elements` (plural) we get _all_ of the download links (returned in an array). We then use `map!` to update the array of download links to give us _just_ the URLs (instead of a collection of Selenium objects which contain URLs). After that, we're able to iterate over the array of URLs, performing a `HEAD` request and assertions for each one (but this time, we're using our new `content_type` helper method).
+By using `find_elements` (plural) we get _all_ download links (returned in an array). We then use `map!` to update the array of download links to give us _just_ the URLs (instead of a collection of Selenium objects which contain URLs). After that, we're able to iterate over the array of URLs, performing a `HEAD` request and assertions for each one (but this time, we're using our new `content_type` helper method).
 
 ## Expected Behavior
 
