--- a/frontend/tips/24-rest-apis/_ruby.mdx
+++ b/frontend/tips/24-rest-apis/_ruby.mdx
@@ -18,7 +18,7 @@ This call takes a JSON request body, and creates a user.
 }
 ```
 
-That tells us we will have to send an `HTTP POST` request to the URL `/v1/create-user`, with a JSON object body that has valid values for all of the fields shown. If this all sounds scary, it might help to know that this is more-or-less what your browser does when you submit a form. In this case though, we are going to do it sans-browser.
+That tells us we will have to send an `HTTP POST` request to the URL `/v1/create-user`, with a JSON object body that has valid values for all the fields shown. If this all sounds scary, it might help to know that this is more-or-less what your browser does when you submit a form. In this case though, we are going to do it sans-browser.
 
 The following module has a `create_test_user` method which we will incorporate into our test setups. It contains some helpful inline comments that describe each of the actions being taken.
 
