--- a/frontend/tips/4-work-with-multiple-windows/_python.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/_python.mdx
@@ -34,7 +34,7 @@ Here's a more resilient approach. One that will work across all browsers.
 Line 24 shows that after loading the page we store the window handles in a variable (e.g., `first_window`)
 and then proceed with clicking the new window link.
 
-Now that we have two windows open we grab all of the window handles again (e.g., `windowHandlesAfter`) and search
+Now that we have two windows open we grab all the window handles again (e.g., `windowHandlesAfter`) and search
 through them to find the new window handle (e.g., the handle that's in the new window handle collection but not the
 initial one). We store the result in another variable (e.g., `new_window`) and then switch between the windows each
 time checking the page title to make sure the correct window is in focus.
