--- a/frontend/tips/4-work-with-multiple-windows/_ruby.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/_ruby.mdx
@@ -32,7 +32,7 @@ Here's a more resilient approach. One that will work across all browsers.
 Line 31 shows that after loading the page we store the window handles in a variable (e.g., `first_window`)
 and then proceed with clicking the new window link.
 
-Now that we have two windows open we grab all of the window handles and search through them to find the new window
+Now that we have two windows open we grab all the window handles and search through them to find the new window
 handle (e.g., the handle that doesn't match the first one we've already stored). We store the result in another
 variable (e.g., `second_window`) and then switch between the windows. Each time checking the page title to make sure
 the correct window is in focus.
