--- a/frontend/tips/45-how-to-test-checkboxes/_java.mdx
+++ b/frontend/tips/45-how-to-test-checkboxes/_java.mdx
@@ -41,7 +41,7 @@ public class Checkboxes {
 
 Before we write any tests, let's walk through both checkbox approaches to see what Selenium gives us.
 
-To do that we'll want to grab all of the checkboxes on the page, and iterate through them. Once using an attribute lookup, and again asking if the element is selected. Each time outputting the return value we get from Selenium.
+To do that we'll want to grab all the checkboxes on the page, and iterate through them. Once using an attribute lookup, and again asking if the element is selected. Each time outputting the return value we get from Selenium.
 
 ```java
     @Test
@@ -115,7 +115,7 @@ When you save and run the file (e.g., `mvn clean test` from the command-line) he
 
 + Open the browser
 + Visit the page
-+ Find all of the checkboxes on the page
++ Find all the checkboxes on the page
 + Assert that the second checkbox (the one that is supposed to be checked on initial page load) is checked
 + Close the browser
 
