--- a/frontend/tips/45-how-to-test-checkboxes/_ruby.mdx
+++ b/frontend/tips/45-how-to-test-checkboxes/_ruby.mdx
@@ -35,7 +35,7 @@ end
 
 Before we write any tests, let's walk through both checkbox approaches to see what Selenium gives us.
 
-To do that we'll want to grab all of the checkboxes on the page, and iterate through them. Once using an attribute lookup, and again asking if the element is selected -- each time outputting the return value we get from Selenium.
+To do that we'll want to grab all checkboxes on the page, and iterate through them. Once using an attribute lookup, and again asking if the element is selected -- each time outputting the return value we get from Selenium.
 
 ```ruby
 run do
@@ -94,7 +94,7 @@ When you save and run the file (e.g., `ruby checkboxes.rb` from the command-line
 
 + Open the browser
 + Visit the page
-+ Find all of the checkboxes on the page
++ Find all checkboxes on the page
 + Assert that the last checkbox (the one that is supposed to be checked on initial page load) is checked
 + Close the browser
 
