--- a/frontend/tips/14-interactive-prompts-revisited/_ruby.mdx
+++ b/frontend/tips/14-interactive-prompts-revisited/_ruby.mdx
@@ -77,7 +77,7 @@ end
 So, what did I do to solve this issue? I used Pry to debug the error and discover my real issue!
 
 To initialize Pry in your code, you have to require the gem, and then place `binding.pry` wherever you want 
-execution of your code to pause so you can jump in and look around for yourself. For example:
+execution of your code to pause, so you can jump in and look around for yourself. For example:
 
 ```ruby
 require 'pry'
