--- a/frontend/tips/53-growl/_java.mdx
+++ b/frontend/tips/53-growl/_java.mdx
@@ -73,7 +73,7 @@ And if we wanted to see color-coded notifications, then we could use one of the 
 
 }
 ```
-The `Thread.Sleep(5000);` is there for demonstration purposes. It will keep the Growl notifications on the page for 5 seconds so they're easier to see. However, if your test fails due to `growl`, you can also use `Thread.Sleep(5000);` to add some more time to your test.
+The `Thread.Sleep(5000);` is there for demonstration purposes. It will keep the Growl notifications on the page for 5 seconds, so they're easier to see. However, if your test fails due to `growl`, you can also use `Thread.Sleep(5000);` to add some more time to your test.
 
 ## Expected Behavior
 
