--- a/frontend/tips/53-growl/_python.mdx
+++ b/frontend/tips/53-growl/_python.mdx
@@ -1,6 +1,6 @@
 ## Example
 
-First we'll need to pull in our requisite libraries (`import unittest` for our test framework, `from selenium import webdriver` to drive the browser, and `import time` to add a delay in our script so we're able to see the notification messages), declare our test class, and wire up some test `setUp` and `tearDown` methods.
+First we'll need to pull in our requisite libraries (`import unittest` for our test framework, `from selenium import webdriver` to drive the browser, and `import time` to add a delay in our script, so we're able to see the notification messages), declare our test class, and wire up some test `setUp` and `tearDown` methods.
 
 ```python
 # filename: growl.py
