--- a/frontend/tips/60-list-tags/_ruby.mdx
+++ b/frontend/tips/60-list-tags/_ruby.mdx
@@ -118,7 +118,7 @@ TagLister.list_tags
 
 This script is built to live one level up from the test directory. And it assumes that the test directory is called `spec`.
 
-We make it so we can pass an argument at runtime, which then gets fed into the tag sorting environment variable (`ENV['TAG_SORT_ORDER']`). If no argument is provided, we default the value to `'usage'`.
+We make it, so we can pass an argument at runtime, which then gets fed into the tag sorting environment variable (`ENV['TAG_SORT_ORDER']`). If no argument is provided, we default the value to `'usage'`.
 
 When we save this and run it with `ruby tag_lister.rb`, we should see a report outputted in the terminal.
 
