--- a/frontend/tips/65-highlight-elements/_javascript.mdx
+++ b/frontend/tips/65-highlight-elements/_javascript.mdx
@@ -54,8 +54,8 @@ By setting a duration, we can control how long to highlight an element on the pa
 
 There are three things going on here.
 
-1. We store the style of the element so we can revert it back when we're done
-2. We change the style of the element so it visually stands out (e.g., a red dashed border)
+1. We store the style of the element, so we can revert it back when we're done
+2. We change the style of the element, so it visually stands out (e.g., a red dashed border)
 3. We revert the style of the element back after 3 seconds
 
 We're accomplishing the style change through JavaScript's `setAttribute` function. And we're executing it with Selenium's `executeScript` command.
@@ -79,7 +79,7 @@ When we save this file and run it (e.g., `mocha` from the command-line) here is 
 - Browser opens
 - Load the page
 - Find the element
-- Change the styling of the element so it has a red dashed-line border
+- Change the styling of the element, so it has a red dashed-line border
 - Wait 3 seconds
 - Revert the styling to remove the border
 - Browser closes
