--- a/frontend/tips/69-safari/_java.mdx
+++ b/frontend/tips/69-safari/_java.mdx
@@ -10,11 +10,11 @@ After that, make sure it's enabled. To do that:
 2. go to `Develop`
 3. click on `Allow Remote Automations`
 
-Let's wire up a simple test so we can see that everything works as expected.
+Let's wire up a simple test, so we can see that everything works as expected.
 
 ## Expected Behavior
 
-Let's wire up a simple test so we can see that everything works as expected.
+Let's wire up a simple test, so we can see that everything works as expected.
 
 ```java
 import org.junit.After;
