--- a/frontend/tips/69-safari/_ruby.mdx
+++ b/frontend/tips/69-safari/_ruby.mdx
@@ -21,7 +21,7 @@ irb(main):002:0> driver = Selenium::WebDriver.for :safari
 
 A successful communication between Safari and the Selenium Driver extension has occurred.
 
-Now let's wire up a simple test so we can see that everything works as expect.
+Now let's wire up a simple test, so we can see that everything works as expect.
 
 ```ruby
 # filename: safari.rb
