--- a/frontend/tips/38-headless/_ruby.mdx
+++ b/frontend/tips/38-headless/_ruby.mdx
@@ -122,7 +122,7 @@ what will happen:
 
 ## Choosing The Best Option
 
-The headless gem is a handy resource. But if you use it, you'll want to make its use configurable so it does not load 
+The headless gem is a handy resource. But if you use it, you'll want to make its use configurable, so it does not load 
 every time. This will be helpful when running your tests in non-Linux environments.
 
 If you're just looking to try out headless testing and you're unsure of how much time you want to invest, then using 
