--- a/frontend/tips/53-growl/_csharp.mdx
+++ b/frontend/tips/53-growl/_csharp.mdx
@@ -78,7 +78,7 @@ If we wanted to see color-coded notifications we would use one of the following.
 }
 ```
 
-The `Thread.Sleep(5000);` is there for demonstration purposes. It will keep the Growl notifications on the page for 5 seconds so they're easier to see. However, if your test fails due to `growl`, you can also use `Thread.Sleep(5000);` to add some more time to your test.
+The `Thread.Sleep(5000);` is there for demonstration purposes. It will keep the Growl notifications on the page for 5 seconds, so they're easier to see. However, if your test fails due to `growl`, you can also use `Thread.Sleep(5000);` to add some more time to your test.
 
 ## Expected Behavior
 
