--- a/frontend/tips/65-highlight-elements/_ruby.mdx
+++ b/frontend/tips/65-highlight-elements/_ruby.mdx
@@ -54,8 +54,8 @@ end
 
 There are three things going on here.
 
-1. We store the style of the element so we can revert it back when we're done
-2. We change the style of the element so it visually stands out (e.g., a red dashed border)
+1. We store the style of the element, so we can revert it back when we're done
+2. We change the style of the element, so it visually stands out (e.g., a red dashed border)
 3. We revert the style of the element back after 3 seconds
 
 We're accomplishing the style change through JavaScript's `setAttribute` function. And we're executing it with Selenium's `execute_script` command.
@@ -76,7 +76,7 @@ If you were to save this file and run it (e.g., `ruby highlight.rb` from the com
 
 1. Load the page
 2. Find the element
-3. Change the styling of the element so it has a red dashed-line border
+3. Change the styling of the element, so it has a red dashed-line border
 4. Wait 3 seconds
 5. Revert the styling to remove the border
 
