--- a/frontend/tips/17-retrieve-http-status-codes/main.mdx
+++ b/frontend/tips/17-retrieve-http-status-codes/main.mdx
@@ -23,7 +23,7 @@ category: 'troubleshooting'
 ## Intro
 
 There are times when you are testing a page (or numerous pages) and you want to verify that it responded correctly.
-A great way to handle this is by checking the HTTP Status Code that the browser received. However this functionality
+A great way to handle this is by checking the HTTP Status Code that the browser received. However, this functionality
 is not available in Selenium WebDriver.
 
 import DisplayTips from '@site/src/components/displayTips';
